# SDL_GPU

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
resources/scenes/: flight_helmet.gltf
resources/shaders/: fragment.frag  vertex.vert
source/: constants.hpp  main.cpp  pch.hpp
source/application/: application.cpp  application.hpp
source/camera/: camera.cpp  camera.hpp
source/scene/: index.hpp  material.cpp  material.hpp  scene.cpp  scene.hpp  sub_mesh.hpp  vertex.cpp  vertex.hpp
source/shader/: shader.cpp  shader.hpp
source/utility/: unique_pointer.hpp
web/: server.js  shell.html
